--- a/mongo/build.gradle
+++ b/mongo/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
     compile project(":core"),
-            "org.mongodb:mongodb-driver-reactivestreams:1.11.0",
+            'org.mongodb:mongodb-driver-reactivestreams:1.11.0',
             'io.smallrye.reactive:smallrye-reactive-streams-operators:1.0.3',
             'io.smallrye.reactive:smallrye-reactive-streams-vertx-execution-model:1.0.3'
 
