--- a/mongo/build.gradle
+++ b/mongo/build.gradle
@@ -1,7 +1,6 @@
 dependencies {
     compile project(":core"),
-            'org.mongodb:mongodb-driver-reactivestreams:1.11.0',
-            'io.projectreactor:reactor-core'
+            'org.mongodb:mongodb-driver-reactivestreams:1.11.0'
 
     testCompile 'com.github.ixtf.japp:poi'
     testCompile 'com.github.ixtf.japp:codec'
