--- a/redis/build.gradle
+++ b/redis/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
     compile project(":core"),
-            "redis.clients:jedis:3.0.1"
+            "redis.clients:jedis:3.0.1",
+            "io.lettuce:lettuce-core:5.1.7.RELEASE"
 }
