--- a/mongo/build.gradle
+++ b/mongo/build.gradle
@@ -1,7 +1,9 @@
 dependencies {
     compile project(":core"),
-            'org.mongodb:mongodb-driver-reactivestreams:1.11.0'
+            'org.mongodb:mongodb-driver-reactivestreams:1.12.0'
 
     testCompile 'com.github.ixtf.japp:poi'
     testCompile 'com.github.ixtf.japp:codec'
+    testImplementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.1.0'
+
 }
