--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'io.spring.dependency-management' version '1.0.7.RELEASE'
-    id 'io.franzbecker.gradle-lombok' version '3.0.0'
+    id "io.spring.dependency-management" version "1.0.8.RELEASE"
+    id "io.franzbecker.gradle-lombok" version "3.2.0"
 }
 allprojects {
     group 'com.github.ixtf.persistence'
@@ -44,21 +44,14 @@ subprojects {
                 'Target-Compatibility': targetCompatibility
         )
     }
-    javadoc.options {
-        encoding = 'UTF-8'
-        use = true
-//        links 'https://docs.oracle.com/javase/8/docs/api/'
-    }
-    task javadocJar(type: Jar) {
-        classifier = 'javadoc'
-        from javadoc
-    }
-    task sourcesJar(type: Jar) {
-        classifier = 'sources'
-        from sourceSets.main.allSource
+
+    java {
+        withJavadocJar()
+        withSourcesJar()
     }
     artifacts {
         archives javadocJar, sourcesJar
     }
+
 }
 
