--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
-    compile 'com.github.ixtf.japp:core',
-            'javax:javaee-api',
-            'cglib:cglib',
-            'commons-beanutils:commons-beanutils',
-            'io.projectreactor:reactor-core'
+    compile "com.github.ixtf.japp:core",
+            "io.projectreactor:reactor-core",
+            "javax:javaee-api",
+            "cglib:cglib",
+            "commons-beanutils:commons-beanutils"
 }
