--- a/mongo/build.gradle
+++ b/mongo/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     compile project(":core"),
-            'org.mongodb:mongodb-driver-reactivestreams:1.12.0'
+            "org.mongodb:mongodb-driver-async:3.11.2",
+            "org.mongodb:mongodb-driver-reactivestreams:1.12.0"
 
     testCompile 'com.github.ixtf.japp:poi'
     testCompile 'com.github.ixtf.japp:codec'
