--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
-    id "io.spring.dependency-management" version "1.0.8.RELEASE"
-//    id "io.freefair.lombok" version "5.0.0-rc6"
-    id "io.franzbecker.gradle-lombok" version "3.3.0"
+    id "io.spring.dependency-management" version "1.0.9.RELEASE"
+    id "io.freefair.lombok" version "5.1.0"
 }
 allprojects {
     group 'com.github.ixtf.persistence'
@@ -11,8 +10,7 @@ allprojects {
     apply plugin: 'maven'
     apply plugin: 'maven-publish'
     apply plugin: 'io.spring.dependency-management'
-//    apply plugin: 'io.freefair.lombok'-
-    apply plugin: 'io.franzbecker.gradle-lombok'
+    apply plugin: 'io.freefair.lombok'
 
     repositories {
         mavenLocal()
